--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,13 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background-color: black;
+    color: white;
+}
+
+img {
+    width: 15px;
+}
+li {
+    list-style: none;
 }
